Fixed positioning of each to-do entry overlapping the button

--- a/src/components/Title/Title.css
+++ b/src/components/Title/Title.css
@@ -1,14 +1,22 @@
 .titleContainer {
-  position: absolute;
-  top: 0;
-  margin-top: 50px;
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.titleElements {
+  margin-bottom: 500px;
 }
 
 .title {
   text-align: center;
   background-color: #353e4fc6;
   border: 2px solid rgba(128, 128, 128, 0.35);
-  ;
   border-radius: 20px;
   padding: 20px;
 }
