--- a/src/components/Todos/Todos.css
+++ b/src/components/Todos/Todos.css
@@ -1,6 +1,8 @@
 .todoContainer {
+  /* display: flex; */
+  /* margin-top: 220px; */
+  /* flex-direction: row; */
   position: relative;
-  margin: 120px;
 }
 
 .singleEntry {
